numbering aliginment changed

--- a/help-support.html
+++ b/help-support.html
@@ -81,7 +81,7 @@
           </p>
           <ol class="sub-headings">
             <li>
-              <h3>Suspendisse quis sem eget magna commodo ornare?</h3>
+              <h3>1. Suspendisse quis sem eget magna commodo ornare?</h3>
               <p>
                 Nam pretium eu eros a dignissim. Fusce vitae vulputate risus, ut
                 placerat enim. Suspendisse lectus quam, fermentum non bibendum
@@ -94,7 +94,7 @@
               </p>
             </li>
             <li class="last-li">
-              <h3>Suspendisse quis sem eget magna commodo ornare?</h3>
+              <h3>2. Suspendisse quis sem eget magna commodo ornare?</h3>
               <p>
                 Nam pretium eu eros a dignissim. Fusce vitae vulputate risus, ut
                 placerat enim. Suspendisse lectus quam, fermentum non bibendum
@@ -120,7 +120,7 @@
           <h1>02 <span class="dash"></span>Payments</h1>
           <ol class="sub-headings">
             <li>
-              <h3>Suspendisse quis sem eget magna commodo ornare?</h3>
+              <h3>1. Suspendisse quis sem eget magna commodo ornare?</h3>
               <p>
                 Nam pretium eu eros a dignissim. Fusce vitae vulputate risus, ut
                 placerat enim. Suspendisse lectus quam, fermentum non bibendum
@@ -141,7 +141,7 @@
               </p>
             </li>
             <li>
-              <h3>Suspendisse quis sem eget magna commodo ornare?</h3>
+              <h3>2. Suspendisse quis sem eget magna commodo ornare?</h3>
               <p>
                 Nam pretium eu eros a dignissim. Fusce vitae vulputate risus, ut
                 placerat enim. Suspendisse lectus quam, fermentum non bibendum
@@ -154,7 +154,7 @@
               </p>
             </li>
             <li class="last-li">
-              <h3>Fusce vitae vulputate risus, ut placerat enim?</h3>
+              <h3>3. Fusce vitae vulputate risus, ut placerat enim?</h3>
               <p>
                 Nam pretium eu eros a dignissim. Fusce vitae vulputate risus, ut
                 placerat enim. Suspendisse lectus quam, fermentum non bibendum
@@ -172,7 +172,7 @@
           <h1>03 <span class="dash"></span>Winnings</h1>
           <ol class="sub-headings">
             <li>
-              <h3>Suspendisse quis sem eget magna commodo ornare?</h3>
+              <h3>1. Suspendisse quis sem eget magna commodo ornare?</h3>
               <p>
                 Nam pretium eu eros a dignissim. Fusce vitae vulputate risus, ut
                 placerat enim. Suspendisse lectus quam, fermentum non bibendum
@@ -193,7 +193,7 @@
               </p>
             </li>
             <li class="last-li">
-              <h3>Suspendisse quis sem eget magna commodo ornare?</h3>
+              <h3>2. Suspendisse quis sem eget magna commodo ornare?</h3>
               <p>
                 Nam pretium eu eros a dignissim. Fusce vitae vulputate risus, ut
                 placerat enim. Suspendisse lectus quam, fermentum non bibendum
