mobile subcard enabled

--- a/index.html
+++ b/index.html
@@ -148,6 +148,42 @@
             <button id="learn-more">learn more</button>
           </div>
         </div>
+        <div id="porfolio-content-wrapper-m">
+          <div class="num-card-m">
+            <div class="num-card-row1">
+              <div class="num-card-num-img">
+                <img src="./assets/images/1.svg" />
+              </div>
+              <div class="num-card-heading">Lorem ipsum dolor sit amet</div>
+            </div>
+            <div class="num-card-row2">
+              Lorem ipsum dolor sit amet, consectetur adipiscing eliT.
+            </div>
+          </div>
+          <div class="num-card-m" id="mid-num-card">
+            <div class="num-card-row1">
+              <div class="num-card-num-img">
+                <img src="./assets/images/2.svg" />
+              </div>
+              <div class="num-card-heading">Lorem ipsum dolor sit amet</div>
+            </div>
+            <div class="num-card-row2">
+              Lorem ipsum dolor sit amet, consectetur adipiscing eliT.
+            </div>
+          </div>
+          <div class="num-card-m">
+            <div class="num-card-row1">
+              <div class="num-card-num-img">
+                <img src="./assets/images/3.svg" />
+              </div>
+              <div class="num-card-heading">Lorem ipsum dolor sit amet</div>
+            </div>
+            <div class="num-card-row2">
+              Lorem ipsum dolor sit amet, consectetur adipiscing eliT.
+            </div>
+          </div>
+          <button id="num-card-more-btn">learn more</button>
+        </div>
       </section>
 
       <div class="strip">
