left-right arrow img added

--- a/index.html
+++ b/index.html
@@ -160,6 +160,8 @@
             <div class="num-card-row2">
               Lorem ipsum dolor sit amet, consectetur adipiscing eliT.
             </div>
+            <img src="./assets/images/right-x.svg" id="right-x"/>
+            <img src="./assets/images/left-x.svg" id="left-x"/>
           </div>
           <div class="num-card-m" id="mid-num-card">
             <div class="num-card-row1">
@@ -171,6 +173,7 @@
             <div class="num-card-row2">
               Lorem ipsum dolor sit amet, consectetur adipiscing eliT.
             </div>
+            
           </div>
           <div class="num-card-m">
             <div class="num-card-row1">
@@ -182,6 +185,7 @@
             <div class="num-card-row2">
               Lorem ipsum dolor sit amet, consectetur adipiscing eliT.
             </div>
+            
           </div>
           <button id="num-card-more-btn">learn more</button>
         </div>
