--- a/help-support.html
+++ b/help-support.html
@@ -44,7 +44,7 @@
         <div id="doc-nav">
           <div class="doc-nav-item">Privacy Policy</div>
           <div class="doc-nav-item">Terms of Service</div>
-          <div class="doc-nav-item">Help & Support</div>
+          <div class="doc-nav-item  active">Help & Support</div>
         </div>
       </section>
       <div id="mobile-dropdown">
