updated top banner.

--- a/index.html
+++ b/index.html
@@ -45,14 +45,22 @@
 
     <section id="portfolio">
       <div id="download-card">
-        <img id="download-card-img" src="./assets/images/download_card.png" alt="" />
+        <div class="fant-div"><img id="download-card-img" src="./assets/images/Mask group (1).png" alt="" /></div>
+        <div class="right-up"></div>
+        <div class="left-btm"></div>
+        <div class="right-btm"></div>
+        <div class=" right-btm right-outer"></div>
+
         <div id="card-content">
-          <h2>ENTER THE RALLY OF FANTASY MOTORSPORTS</h2>
+          <div class="fantasy">
+            <div class="side-line"></div>
+            <h2>ENTER THE RALLY OF FANTASY MOTORSPORTS</h2>
+          </div>
           <div id="download-options-wrapper">
-            <img class="download-options" src="./assets/images/app-store.png" alt="play-store" loading="lazy" />
+            <img class="download-options" src="./assets/images/XMLID_206_.png" alt="play-store" loading="lazy" />
             <div class="play-store">
               <p class="wait-text">*Coming Soon</p>
-              <img class="download-options" src="./assets/images/play-store.png" alt="play-store" loading="lazy" />
+              <img class="download-options2" src="./assets/images/google-play-badge.png" alt="play-store" loading="lazy" />
             </div>
           </div>
         </div>
@@ -123,7 +131,7 @@
               <div class="text-card">
                 <p class="card-title">Place Your Bet and Win.</p>
                 <p class="text">
-                  Analyse statistics, assess our scoring criteria and predict your wins - once you’re confident, place
+                  Analyse statistics, assess our scoring criteria and predict your wins - once you're confident, place
                   your bet.
                 </p>
               </div>
@@ -321,9 +329,10 @@
     <section id="final">
       <div id="final-content-wrapper">
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-          Pellentesque ut turpis malesuada, pellentesque elit ut, commodo
-          tellus.
+          <span class="foot-msg">The more you play, the more you win!</span> <br><br>
+
+          Show off your expertise in motorsports to your friends, win big and enjoy the rich experience of fantasy
+          gaming.
         </p>
         <div id="download-options-wrapper">
           <img class="download-options" src="./assets/images/app-store.png" alt="play-store" loading="lazy" />
@@ -382,7 +391,10 @@
           <img src="./assets/images/arrow.svg" id="subcard-footer-arrow" />
         </div>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Try Now.
+          The more you play, the more you win!
+
+          Show off your expertise in motorsports to your friends, win big and enjoy the rich experience of fantasy
+          gaming.
         </p>
       </div>
       <div id="footer-subcard">
