--- a/index.html
+++ b/index.html
@@ -453,4 +453,15 @@
       </div>
     </footer>
   </body>
+  <script>
+    const menu = document.querySelector("#hamburger-menu-wrapper");
+    const close = document.querySelector(".close");
+    const nav = document.querySelector("nav");
+    menu.addEventListener("click", () => {
+      nav.classList.add("open-nav");
+    });
+    close.addEventListener("click", () => {
+      nav.classList.remove("open-nav");
+    });
+  </script>
 </html>
