added changes to the code

--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                   <div class="card-num">
                     <img src="./assets/images/Group 9038 (1).png" />
                   </div>
-                  <div class="text-card">
+                  <div class="text-card card-1">
                     <p class="card-title">Choose A Motorsport You Love.</p>
                     <p class="text text-1">
                       PodiumPe aims to bring diverse options for all motorsports
@@ -209,7 +209,7 @@
                   <div class="card-num up-shift">
                     <img src="./assets/images/Group 9040.png" />
                   </div>
-                  <div class="text-card pd-1">
+                  <div class="text-card pd-1 card-2">
                     <p class="card-title">Choose A Game That Suits You.</p>
                     <p class="text text-2">
                       We create separate game types to suit different
