made changes to the code

--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                   <div class="card-num up-shift">
                     <img src="./assets/images/Group 9039.png" />
                   </div>
-                  <div class="text-card pd-1">
+                  <div class="text-card pd-1 card-3">
                     <p class="card-title">Place Your Bet and Win.</p>
                     <p class="text text-3">
                       Analyse statistics, assess our scoring criteria and
