added changes to the code

--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
               <div class="col-wrapper">
                 <div class="col">
                   <div class="col-heading">
-                    <h2>GAME XYZ</h2>
+                    <h2>Race Engineer</h2>
                     <div class="underline"></div>
                   </div>
                   <p>
@@ -342,7 +342,7 @@
               <div class="col-wrapper">
                 <div class="col">
                   <div class="col-heading">
-                    <h2>GAME XYZ</h2>
+                    <h2>Team Principal</h2>
                     <div class="underline"></div>
                   </div>
                   <p>
@@ -376,7 +376,7 @@
         </div>
         <div id="game-content-wrapper-m">
           <div class="gm-content-card" id="top-game-card">
-            <h4>Game xyz</h4>
+            <h4>Race Engineer</h4>
             <p>
               New to Formula-1 or Fantasy Sports? Try your hand at our easy to
               bet and easy to win: *insert game name* for F1 Fantasy with
@@ -392,7 +392,7 @@
           <h1 class="f-text-m">FORMULA 1</h1>
           <!-- <img id="formula-m" src="./assets/images/mobile/formula.svg" /> -->
           <div class="gm-content-card" id="bottom-game-card">
-            <h4>Game xyz</h4>
+            <h4>Team Principal</h4>
             <p>
               Are you a seasoned Formula-1 fan? To make our Formula-1 Fantasy
               Gaming more thrilling, choose custom upgrades and drivers with
@@ -421,7 +421,7 @@
           </div>
           <div class="strip-left"></div>
         </div>
-        <div class="mobile-up" id="gm-strip">
+        <div class="mobile-up">
           <h1 class="earn-txt">EARN UPTO 4X</h1>
           <div class="earn-div">
             <div>
@@ -431,13 +431,13 @@
               <h2>X X X X X X</h2>
             </div>
           </div>
-          <div class="upcom-m">
-            <div class="strip-left"></div>
+          <!-- <img src="./assets/images/pp-strip.png" /> -->
+        </div>
+        <div class="upcom-m">
+            <div class="stripe-up"></div>
             <div class="up-text">
               <h1>UPCOMING</h1>
             </div>
-          </div>
-          <!-- <img src="./assets/images/pp-strip.png" /> -->
         </div>
         <!-- <img src="./assets/images/upcoming-m.png" class="strip-img-m" /> -->
       </div>
