changed upcomming part

--- a/index.html
+++ b/index.html
@@ -423,14 +423,7 @@
         </div>
         <div class="mobile-up">
           <h1 class="earn-txt">EARN UPTO 4X</h1>
-          <div class="earn-div">
-            <div>
-              <!-- <h2>X X X X X X</h2> -->
-            </div>
-            <div>
-              <h2>X X X X X X</h2>
-            </div>
-          </div>
+          <p class="xxx">X X X X X X</h2>
           <!-- <img src="./assets/images/pp-strip.png" /> -->
         </div>
         <div class="upcom-m">
