--- a/index.html
+++ b/index.html
@@ -487,13 +487,13 @@
         <div id="footer-content-right">
           <div id="pm-nav">
             <div class="pm-nav-items">
-              <a href="TermsAndService.html">Terms & Conditions</a>
+              <a href="TermsAndService.html" class="footer-links">Terms & Conditions</a>
             </div>
             <div class="pm-nav-items">
-              <a href="PrivacyPolicy.html">Privacy Policy</a>
+              <a href="PrivacyPolicy.html"  class="footer-links">Privacy Policy</a>
             </div>
             <div class="pm-nav-items">
-              <a href="help-support.html">Help & Support</a>
+              <a href="help-support.html"  class="footer-links">Help & Support</a>
             </div>
           </div>
           <div id="pm-card">
@@ -512,9 +512,9 @@
         </div>
       </div>
       <div id="footer-content-m">
-        <li><a href="TermsAndService.html">Terms & Conditions</a></li>
-        <li><a href="PrivacyPolicy.html">Privacy Policy</a></li>
-        <li><a href="help-support.html">Help & Support</a></li>
+        <li><a href="TermsAndService.html" class="footer-links">Terms & Conditions</a></li>
+        <li><a href="PrivacyPolicy.html" class="footer-links">Privacy Policy</a></li>
+        <li><a href="help-support.html" class="footer-links">Help & Support</a></li>
         <div id="footer-card">
           <div id="footer-card-header">
             <div id="footer-card-header-m-logo">
