added changes to the code

--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>PodiumPe | Racign is our religion</title>
+    <meta name="description" content="Rev up your fantasy gaming experience with PodiumPe - the ultimate online platform dedicated to motorsport enthusiasts! Create your dream team, compete against fellow fans, and conquer the virtual racetrack. Get in pole position and fuel your passion for motorsport with PodiumPe!">
+    <meta name="keywords" content="Formula1, Racing, motorsports">
+    <link rel="icon" type="image/x-icon" href="./assets/images/favicon.ico">
     <link rel="stylesheet" href="./assets/styles/styles.css" />
     <link rel="stylesheet" href="./assets/styles/mobile.css" />
   </head>
