--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@
               <span>A Product of Shortsqueeze Pvt Ltd.</span>
             </div>
           </div>
-          <div id="copyright">Copyright 2022</div>
+          <div id="copyright">Copyright @2023</div>
         </div>
         <div id="footer-content-right">
           <div id="pm-nav">
