fix footer-123section-(mobile-version)123section fix links

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <h4 class="pp-title">PodiumPe</h4>
           <div class="res-line"></div>
           <ul id="nav-menu">
-            <a class="res-link">
+            <a class="res-link" href="./index.html">
               <li>Home</li>
             </a>
             <a>
@@ -55,7 +55,7 @@
             <a>
               <li>How to play</li>
             </a>
-            <a class="res-link">
+            <a class="res-link" href="./TermsAndService.html">
               <li>Terms & Policies</li>
             </a>
           </ul>
@@ -88,7 +88,7 @@
               stroke="#00EEF9"
             />
           </svg>
-          <div class="res-footer">&copy Shortsqueeze Pvt Ltd. 2023</div>
+          <div class="res-footer"><span class="copywrite">©</span>  Shortsqueeze Pvt Ltd. 2023</div>
         </div>
       </nav>
       <div id="hamburger-menu-wrapper">
@@ -201,7 +201,7 @@
                     <img src="./assets/images/Group 9038 (1).png" />
                   </div>
                   <div class="text-card card-1">
-                    <p class="card-title">Choose A Motorsport You Love.</p>
+                    <p class="card-title card-title-1">Choose A Motorsport You Love.</p>
                     <p class="text text-1">
                       PodiumPe aims to bring diverse options for all motorsports
                       fans.
@@ -227,7 +227,7 @@
                     <img src="./assets/images/Group 9039.png" />
                   </div>
                   <div class="text-card pd-1 card-3">
-                    <p class="card-title">Place Your Bet and Win.</p>
+                    <p class="card-title card-title-3">Place Your Bet and Win.</p>
                     <p class="text text-3">
                       Analyse statistics, assess our scoring criteria and
                       predict your wins - once you're confident, place your bet.
@@ -259,31 +259,50 @@
         </div> -->
         <!-- <img src="./assets/images/xpic1.svg" /> -->
 
-        <img src="./assets/images/whats-it.svg" id="whats-it" />
+        <!-- <img src="./assets/images/whats-it.svg" id="whats-it" /> -->
         <div id="porfolio-content-wrapper-m">
-          <div class="num-card-m">
+          <div class="x-mb-left">
+            <div class="x-mb-element x-mb-left-first">X</div>
+            <div class="x-mb-element x-mb-left-second">X</div>
+            <div class="x-mb-element x-mb-left-third">X</div>
+          </div>
+          <div class="x-mb-middle">
+            <p>WHAT’S ON THE APP?</p>
+          </div>
+          <div class="x-mb-right">
+            <div class="x-mb-element x-mb-right-first">X</div>
+            <div class="x-mb-element x-mb-right-second">X</div>
+            <div class="x-mb-element x-mb-right-third">X</div>
+          </div>
+          <div class="x-mb-left2">
+            <div class="x-mb-element x-mb-left2-first">X</div>
+            <div class="x-mb-element x-mb-left2-second">X</div>
+            <div class="x-mb-element x-mb-left2-third">X</div>
+          </div>
+
+          <div class="num-card-m" id="num-card-1">
             <div class="num-card-row1">
               <div class="num-card-num-img">
-                <img src="./assets/images/1.svg" />
+                <img src="./assets/images/mobile/1bluemobile.svg" />
               </div>
               <div class="num-card-heading">
-                <p>Choose A Motorsport You Love.</p>
+                <p class="num-card-heading1">Choose A Motorsport You Love.</p>
               </div>
             </div>
             <div class="num-card-row2">
               PodiumPe aims to bring diverse options for all motorsports fans.
             </div>
-            <img src="./assets/images/right-x.svg" id="right-x" />
-            <img src="./assets/images/left-x.svg" id="left-x" />
+            <!-- <img src="./assets/images/right-x.svg" id="right-x" />
+            <img src="./assets/images/left-x.svg" id="left-x" /> -->
           </div>
           <div class="num-card-m" id="mid-num-card">
             <div class="num-card-row1">
               <div class="num-card-num-img">
-                <img src="./assets/images/2.svg" />
+                <img src="./assets/images/mobile/2bluemobile.svg" />
               </div>
               <div class="num-card-heading">Choose A Game That Suits You.</div>
             </div>
-            <div class="num-card-row2">
+            <div class="num-card-row2 num-card-row2-text2">
               We create separate game types to suit different preferences and
               expertise levels.
             </div>
@@ -291,7 +310,7 @@
           <div class="num-card-m">
             <div class="num-card-row1">
               <div class="num-card-num-img">
-                <img src="./assets/images/3.svg" />
+                <img src="./assets/images/mobile/3bluemobile.svg" />
               </div>
               <div class="num-card-heading">Place Your Bet and Win.</div>
             </div>
@@ -501,15 +520,17 @@
           </div>
           <div id="pm-card">
             <p id="pm-card-text">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Try Now.
+              Explore our community of car enthusiasts for more engaging discussions.
             </p>
             <div id="pm-subcard">
-              <img src="./assets/images/logo2.svg" id="subcard-footer-logo" />
+              <img src="./assets/images/Racingline1.png" alt="raceline">
+              <!-- <img src="./assets/images/logo2.svg" id="subcard-footer-logo" />
               <span id="subcard-footer-text"
                 ><span id="subcard-footer-text-heading">Lights Out</span> By
                 Podium Pe</span
               >
-              <img src="./assets/images/arrow.svg" id="subcard-footer-arrow" />
+              <img src="./assets/images/arrow.svg" id="subcard-footer-arrow" /> -->
+              <img src="./assets/images/arrowblack.svg" alt="arrow">
             </div>
           </div>
         </div>
@@ -520,20 +541,19 @@
         <li><a href="help-support.html" class="footer-links">Help & Support</a></li>
         <div id="footer-card">
           <div id="footer-card-header">
-            <div id="footer-card-header-m-logo">
+            <!-- <div id="footer-card-header-m-logo">
               <img src="./assets/images/logo2.svg" />
             </div>
 
             <span id="footer-card-hearer-text"
               ><span id="footer-card-hearer-text-heading">Lights Out</span> By
               Podium Pe</span
-            >
-            <img src="./assets/images/arrow.svg" id="subcard-footer-arrow" />
+            > -->
+            <img src="./assets/images/Racingline1.png" alt="raceline">
+            <img src="./assets/images/arrowblack.svg" id="subcard-footer-arrow" />
           </div>
           <p>
-            The more you play, the more you win! Show off your expertise in
-            motorsports to your friends, win big and enjoy the rich experience
-            of fantasy gaming.
+            Explore our community of car enthusiasts for more engaging discussions.
           </p>
         </div>
         <div id="footer-subcard">
