changed font and images

--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
           <div class="num-card-m" id="num-card-1">
             <div class="num-card-row1">
               <div class="num-card-num-img">
-                <img src="./assets/images/mobile/1bluemobile.svg" />
+                <img src="./assets/images/mobile/1bluemobile.png" />
               </div>
               <div class="num-card-heading">
                 <p class="num-card-heading1">Choose A Motorsport You Love.</p>
@@ -298,7 +298,7 @@
           <div class="num-card-m" id="mid-num-card">
             <div class="num-card-row1">
               <div class="num-card-num-img">
-                <img src="./assets/images/mobile/2bluemobile.svg" />
+                <img src="./assets/images/mobile/2bluemobile.png" />
               </div>
               <div class="num-card-heading">Choose A Game That Suits You.</div>
             </div>
@@ -310,7 +310,7 @@
           <div class="num-card-m">
             <div class="num-card-row1">
               <div class="num-card-num-img">
-                <img src="./assets/images/mobile/3bluemobile.svg" />
+                <img src="./assets/images/mobile/3bluemobile.png" />
               </div>
               <div class="num-card-heading">Place Your Bet and Win.</div>
             </div>
@@ -523,7 +523,7 @@
               Explore our community of car enthusiasts for more engaging discussions.
             </p>
             <div id="pm-subcard">
-              <img src="./assets/images/Racingline1.png" alt="raceline">
+              <img src="./assets/images/Racingline.svg" alt="raceline">
               <!-- <img src="./assets/images/logo2.svg" id="subcard-footer-logo" />
               <span id="subcard-footer-text"
                 ><span id="subcard-footer-text-heading">Lights Out</span> By
@@ -549,8 +549,8 @@
               ><span id="footer-card-hearer-text-heading">Lights Out</span> By
               Podium Pe</span
             > -->
-            <img src="./assets/images/Racingline1.png" alt="raceline">
-            <img src="./assets/images/arrowblack.svg" id="subcard-footer-arrow" />
+            <img src="./assets/images/racelinen.png" alt="raceline">
+            <img src="./assets/images/mobile/arrowBlack.png" id="subcard-footer-arrow" />
           </div>
           <p>
             Explore our community of car enthusiasts for more engaging discussions.
