fix images and started about page

--- a/about.html
+++ b/about.html
@@ -1,13 +1,132 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./assets/styles/about.css">
-    <link rel="stylesheet" href="./assets/styles/about-mobile.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/styles/about.css" />
+    <link rel="stylesheet" href="./assets/styles/about-mobile.css" />
     <title>About</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <div id="about">
+      <!-- title about page -->
+      <div class="about-title">
+        <img
+          class="slash slash-1"
+          src="./assets/images/slash.png"
+          alt="slash"
+        />
+        <img
+          class="slash slash-2"
+          src="./assets/images/slash.png"
+          alt="slash"
+        />
+        <div class="title-content">
+          <p class="title1">WE BRING THE THRILL OF</p>
+          <h1 id="main-title">MOTORSPORTS</h1>
+          <p class="title2">INTO YOUR EVERYDAY LIFE.</p>
+        </div>
+        <img
+          class="slash slash-3"
+          src="./assets/images/slash.png"
+          alt="slash"
+        />
+        <img
+          class="slash slash-4"
+          src="./assets/images/slash.png"
+          alt="slash"
+        />
+      </div>
+      <!-- about page right side container hero section -->
+      <div id="about-hero">
+        <div id="about-vertical-title">
+          <p class="vertical-title-1">PODIUMPE</p>
+          <div class="vertical-title-box">
+            <p>WIN BIG WIN MORE</p>
+          </div>
+        </div>
+        <div class="hero-right-container">
+          <div class="hero-right-content">
+            <p class="hero-r-p1">
+              Motorsports, to us, is more than just about fast-paced cars.
+            </p>
+            <p>
+              For all motorsports fanatics out there, we aim to craft
+              experiences that allow our users to express their passion through
+              strategy, intelligence, and calculations - with the taste of fate
+              - through fantasy gaming.
+            </p>
+          </div>
+          <div class="hero-right-border rborder-1"></div>
+          <div class="hero-right-border rborder-2"></div>
+          <div class="hero-right-border rborder-3"></div>
+        </div>
+        <!-- car img -->
+        <img class="hero-car" src="/assets/images/carblack.png" alt="car" />
+        <!--car front text -->
+        <div class="car-front-text">
+          <div class="carf-row1">
+            <p class="carf-text1">XX</p>
+            <p class="carf-text2">OUR</p>
+          </div>
+          <p class="carf-text3">VISION</p>
+        </div>
+        <!-- core values section -->
+        <div id="corevalue-section">
+          <div class="core-title">
+            <p class="core-title-1">CORE</p>
+            <p class="core-title-2">VALUES</p>
+          </div>
+          <div class="core-trophy">
+            <!-- trophy2 -->
+            <div class="core-2">
+              <div class="coreblock2">
+                <p class="core-value-2">2</p>
+                <img
+                  class="trophy2"
+                  src="/assets/images/trophy2.png"
+                  alt="trophy2"
+                />
+              </div>
+              <div class="core-2-title">
+                <p>Inclusivity and Diversity</p>
+              </div>
+              <div class="core-border"></div>
+              <div class="core-description">
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                  Pellentesque ut turpis.
+                </p>
+              </div>
+            </div>
+            <!-- trophy1 -->
+            <div class="core-1">
+              <div class="coreblock1">
+                <p class="core-value-1">1</p>
+                <img
+                  class="trophy1"
+                  src="/assets/images/trophy1.png"
+                  alt="trophy1"
+                />
+              </div>
+              <div class="core-1-title">
+                <p>Crafting The Best Experience</p>
+              </div>
+              <div class="core-border"></div>
+              <div class="core-description">
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                  Pellentesque ut turpis.
+                </p>
+                <p class="core-1-desp2">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                  Pellentesque ut turpis.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
