--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
                   </div>
                   <p>
                     New to Formula-1 or Fantasy Sports? Try your hand at our
-                    easy to bet and easy to win: *insert game name* for F1
+                    easy to bet and easy to win: Race Engineer for F1
                     Fantasy with pre-made teams of 2 drivers each.
                   </p>
                   <h4>Quick and Easy</h4>
@@ -370,7 +370,7 @@
                   <p>
                     Are you a seasoned Formula-1 fan? To make our Formula-1
                     Fantasy Gaming more thrilling, choose custom upgrades and
-                    drivers with *insert game name*
+                    drivers with Team Principal
                   </p>
                   <h4>Thrill-Seeking</h4>
                   <p>
@@ -523,7 +523,7 @@
               Explore our community of car enthusiasts for more engaging discussions.
             </p>
             <div id="pm-subcard">
-              <img src="./assets/images/Racingline.svg" alt="raceline">
+              <img class="raceline" src="./assets/images/racelinen.png" alt="raceline">
               <!-- <img src="./assets/images/logo2.svg" id="subcard-footer-logo" />
               <span id="subcard-footer-text"
                 ><span id="subcard-footer-text-heading">Lights Out</span> By
@@ -549,7 +549,7 @@
               ><span id="footer-card-hearer-text-heading">Lights Out</span> By
               Podium Pe</span
             > -->
-            <img src="./assets/images/racelinen.png" alt="raceline">
+            <img  class="raceline" src="./assets/images/racelinen.png" alt="raceline">
             <img src="./assets/images/mobile/arrowBlack.png" id="subcard-footer-arrow" />
           </div>
           <p>
