fix arrow image

--- a/about.html
+++ b/about.html
@@ -124,6 +124,28 @@
                 </p>
               </div>
             </div>
+            <!-- trophy3 -->
+            <div class="core-3">
+                <div class="coreblock3">
+                  <p class="core-value-3">3</p>
+                  <img
+                    class="trophy3"
+                    src="/assets/images/trophy3.png"
+                    alt="trophy1"
+                  />
+                </div>
+                <div class="core-3-title">
+                  <p>Crafting The Best Experience</p>
+                </div>
+                <div class="core-border"></div>
+                <div class="core-description">
+                  <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Pellentesque ut turpis.
+                  </p>
+                </div>
+              </div>
+
           </div>
         </div>
       </div>
