--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
             <h4>Race Engineer</h4>
             <p>
               New to Formula-1 or Fantasy Sports? Try your hand at our easy to
-              bet and easy to win: *insert game name* for F1 Fantasy with
+              bet and easy to win: Race Engineer for F1 Fantasy with
               pre-made teams of 2 drivers each.
             </p>
             <h6>Quick and Easy</h6>
@@ -418,7 +418,7 @@
             <p>
               Are you a seasoned Formula-1 fan? To make our Formula-1 Fantasy
               Gaming more thrilling, choose custom upgrades and drivers with
-              *insert game name*
+              Team Principal
             </p>
             <h6>Thrill-Seeking</h6>
             <p>
@@ -530,7 +530,7 @@
                 Podium Pe</span
               >
               <img src="./assets/images/arrow.svg" id="subcard-footer-arrow" /> -->
-              <img src="./assets/images/arrowblack.svg" alt="arrow">
+              <img class="arrow-footer" src="./assets/images/arrowblack.png" alt="arrow">
             </div>
           </div>
         </div>
@@ -550,7 +550,7 @@
               Podium Pe</span
             > -->
             <img  class="raceline" src="./assets/images/racelinen.png" alt="raceline">
-            <img src="./assets/images/mobile/arrowBlack.png" id="subcard-footer-arrow" />
+            <img  class="arrow-footer" src="./assets/images/arrowblack.png" id="subcard-footer-arrow" />
           </div>
           <p>
             Explore our community of car enthusiasts for more engaging discussions.
