--- a/TermsAndService.html
+++ b/TermsAndService.html
@@ -16,10 +16,10 @@
         <img id="logo" src="./assets/images/logo2.svg" alt="logo" loading="lazy" />
         <nav>
             <ul id="nav-menu">
-                <a>
+                <a href="about.html">
                     <li>About</li>
                 </a>
-                <a>
+                <a href="HowToPlay.html">
                     <li>How to Play</li>
                 </a>
                 <div id="category-dropmenu">
@@ -44,9 +44,9 @@
             <h1>TERMS & POLICIES</h1>
             <div id="red-line"></div>
             <div id="doc-nav">
-                <div class="doc-nav-item">Privacy Policy</div>
+                <div class="doc-nav-item"><a href="PrivacyPolicy.html">Privacy Policy</a></div>
                 <div class="doc-nav-item active">Terms of Service</div>
-                <div class="doc-nav-item">Help & Support</div>
+                <div class="doc-nav-item"><a href="help-support.html">Help & Support</a></div>
             </div>
         </section>
         <div id="mobile-dropdown">
@@ -818,7 +818,7 @@
                     Bhopal, Madhya Pradesh 462016 <br>
                     India <br>
                     <b>Phone: 0755-4055530</b> <br>
-                    <a href="hi@shortsqueeze.space">hi@shortsqueeze.space</a>
+                    hi@shortsqueeze.space
                 </p>
 
             </div>
@@ -843,19 +843,29 @@
             </div>
             <div id="footer-content-right">
                 <div id="pm-nav">
-                    <div class="pm-nav-items">Terms & Conditions</div>
-                    <div class="pm-nav-items">Privacy Policy</div>
-                    <div class="pm-nav-items">Help & Support</div>
+                    <div class="pm-nav-items">
+                        <a href="TermsAndService.html" class="footer-links">Terms & Conditions</a>
+                    </div>
+                    <div class="pm-nav-items">
+                        <a href="PrivacyPolicy.html" class="footer-links">Privacy Policy</a>
+                    </div>
+                    <div class="pm-nav-items">
+                        <a href="help-support.html" class="footer-links">Help & Support</a>
+                    </div>
                 </div>
                 <div id="pm-card">
                     <p id="pm-card-text">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Try Now.
+                        Explore our community of car enthusiasts for more engaging discussions.
                     </p>
                     <div id="pm-subcard">
-                        <img src="./assets/images/logo2.svg" id="subcard-footer-logo" />
-                        <span id="subcard-footer-text"><span id="subcard-footer-text-heading">Lights Out</span> By
-                            Podium Pe</span>
-                        <img src="./assets/images/arrow.svg" id="subcard-footer-arrow" />
+                        <img src="./assets/images/Racingline.svg" alt="raceline">
+                        <!-- <img src="./assets/images/logo2.svg" id="subcard-footer-logo" />
+                        <span id="subcard-footer-text"
+                          ><span id="subcard-footer-text-heading">Lights Out</span> By
+                          Podium Pe</span
+                        >
+                        <img src="./assets/images/arrow.svg" id="subcard-footer-arrow" /> -->
+                        <img src="./assets/images/arrowblack.svg" alt="arrow">
                     </div>
                 </div>
             </div>
